--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
     "bcryptjs": "^2.4.3",
     "config": "^3.3.9",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "jsonwebtoken": "^9.0.0",
     "mysql": "^2.18.1"
   }
